--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "mongodb": "^5.7.0",
-        "bcrypt": "^5.0.0"
+        "bcrypt": "^5.0.0",
+        "socket.io": "^4.2.0"
 
     },
     "devDependencies": {
