--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "main": "server.js",
     "type": "module",
     "scripts": {
-        "start": "nodemon server.js",
+        "start": "node server.js",
         "server:dev": "nodemon server.js",
         "server:prod": "set NODE_ENV=production&&node server.js"
     },
